@@ -5,7 +5,8 @@ import com.ibm.wala.cast.js.util.FieldBasedCGUtil.BuilderType;
 import com.ibm.wala.util.CancelException;
 import com.ibm.wala.util.WalaException;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
@@ -13,9 +14,10 @@ import org.junit.jupiter.api.Test;
 public class FieldBasedJQueryTest extends AbstractFieldBasedTest {
 
   @Test
-  public void test1_8_2() throws IOException, WalaException, Error, CancelException {
+  public void test1_8_2()
+      throws IOException, WalaException, Error, CancelException, URISyntaxException {
     runTest(
-        new URL("http://code.jquery.com/jquery-1.8.2.js"),
+        new URI("http://code.jquery.com/jquery-1.8.2.js").toURL(),
         new Object[][] {},
         BuilderType.OPTIMISTIC_WORKLIST);
   }
